--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
         freshwater lake.</string>
     <string name="prev_button">Previous</string>
+
+    <!--Cheating string values.-->
+    <string name="cheat_button">Cheat!</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="judgment_toast">Cheating is wrong.</string>
 </resources>
