--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="warning_text">Are you sure you want to do this?</string>
     <string name="show_answer_button">Show Answer</string>
     <string name="judgment_toast">Cheating is wrong.</string>
+    <string name="cheat_message">Cheater!!</string>
 </resources>
